# hextoe

./: .gitignore  Cargo.toml  README.md  bookmarklet.js  example-loss.html  games-1774572188158.json  interceptor.js  lost-game-with-bot.html  nnue_model.safetensors.loss-0.69-2026-03-26  receive-online.md  todo.md  todo2.md  train.py  train_selfplay.py
hextoe/: Cargo.toml
hextoe-py/: Cargo.toml  pyproject.toml
hextoe-py/src/: lib.rs
hextoe/benches/: mcts_bench.rs  train_bench.rs
hextoe/live_games/: lost-game-2026-03-27.json
hextoe/src/: api.rs  device.rs  encode.rs  game.rs  lib.rs  main.rs  mcts.rs  nn.rs  nnue.rs  self_play.rs  supervised.rs  symmetry.rs  train.rs
live_games/: y6xs8w.json
mcts-rs/: .cargoignore  Cargo.toml  README.md
mcts-rs/examples/: tic_tac_toe.rs  ultimate_tic_tac_toe.rs
mcts-rs/src/: lib.rs  state.rs
mcts-rs/src/mcts/: arena.rs  mod.rs  node.rs
