[package]
name = "hextoe"
version = "0.1.0"
edition = "2021"

[lib]
name = "hextoe"
path = "src/lib.rs"

[[bin]]
name = "hextoe"
path = "src/main.rs"

[[bin]]
name = "hextoe-train"
path = "src/bin/train.rs"

[dependencies]
rayon = "1.10"
eframe = "0.28"
egui = "0.28"
rand = "0.8"
candle-core = "0.8"
candle-nn = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mcts_bench"
harness = false

[profile.release]
opt-level = 3
