[package]
name = "hextoe"
version = "0.1.0"
edition = "2021"

[lib]
name = "hextoe"
path = "src/lib.rs"

[[bin]]
name = "hextoe"
path = "src/main.rs"

[[bin]]
name = "hextoe-train"
path = "src/bin/train.rs"

[[bin]]
name = "hextoe-train-gui"
path = "src/bin/train_gui.rs"

[[bin]]
name = "hextoe-pretrain"
path = "src/bin/pretrain.rs"

[[bin]]
name = "hextoe-pretrain-nnue"
path = "src/bin/pretrain_nnue.rs"

[[bin]]
name = "hextoe-train-vs-naive"
path = "src/bin/train_vs_naive.rs"

[[bin]]
name = "hextoe-train-selfplay"
path = "src/bin/train_selfplay.rs"

[dependencies]
rayon = "1.10"
eframe = "0.28"
egui = "0.28"
rand = "0.8"
candle-core = "0.8"
candle-nn = "0.8"
sysinfo = "0.38.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# Metal GPU on Apple Silicon / macOS (no effect on other targets).
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8", features = ["metal", "accelerate"] }
candle-nn = { version = "0.8", features = ["metal", "accelerate"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mcts_bench"
harness = false

[[bench]]
name = "train_bench"
harness = false

[profile.release]
opt-level = 3
